--- a/sampleapp/sourceNew/app.yaml
+++ b/sampleapp/sourceNew/app.yaml
@@ -5,7 +5,5 @@ threadsafe: true
 handlers:
 # site root
 - url: /
-  static_files: static/index.html
-  upload: static/index.html
-  expiration: "15m"
+  script: helloworld.app
   
